		http://stackoverflow.com/questions/6428881/how-to-insert-a-string-into-a-richtextbox
	- todo: save richtextbox contents to resource
		- "Save All and Exit" flushes out content in active window and closes program
		- save as stream, output to resource?


2016.11.24
- moving to hardcoded tabs instead of dynamic tab system
- added richtextbox to all "sub"tabs by doubleclick


2016.11.25
- changed "+" tab event handler for Main, Music, and Links to single event handler
	- dynamic tab system is dead, code will remain for future use
- singular richtextbox event handler created for Music and Links
- movie rtb has its own event handler


2016.11.28
- "to do" tab and "to do" + "reminders" subtabs created
- attached rtb event handler to "to do" mouse doubleclick
- temporarily turning "Flush" button into RTB resource saver


2016.11.29
- in process of outputting rtb contents to associated resource file


2016.11.30
- using rtb.LoadFile(...) instead of "rtb.Text = Properties..."
	- on first build, loads contents from original resource content file
	- on subsequent runs+loads, saved content persists and is loaded into rtb
	- "rtb.Text = Properties..." load the string inside the original resource file, rather than persistent file
	- cleaning the solution will deploy the resource files again


2016.12.01
- finished "Save All" and "Save All and Exit"
- working on flush button
	- using array (activearray) to indicate which tab is currently active
	- SelectedIndexChanged is an array of 0s with a single 1, 1 indicating the active tab, 0 for all inactive tabs
	    0: td_reminders, 1: td_td, 2: music_all, 3: music_ind, 4: music_met
        5: links_all, 6: links_yt, 7: links_arts, 8: movies
	- allow content flushed to tab whose contents aren't open?


2016.12.02
- allowed content flushed to tab whose contents aren't open
- implementing a status bar to give indication which tabpage is open (problem if tab page isn't active)